--- a/scripts/01_Make-Plots.Rmd
+++ b/scripts/01_Make-Plots.Rmd
@@ -16,6 +16,8 @@ library(cowplot)
 library(ggridges)
 library(scales)
 
+install.packages("rsconnect")
+library(rsconnect)
 
 # Load in packages needed for ARTIS
 library(devtools)
@@ -81,15 +83,6 @@ create_map <- function(data, country.col.name = "consumer_iso3c", fill = "prop_m
     coord_sf(crs = "+proj=robin") +
     theme_minimal() +
     labs(fill = "Aquatic animal/protein reliance")
-    # theme(
-    #   legend.position   = c(0.25, 0.08),
-    #   legend.direction  = "horizontal",
-    #   legend.background = element_rect(color = "black", fill = "white", size = 0.5),
-    #   legend.key.width  = unit(1.5, "cm"),
-    #   legend.ticks      = element_blank(),
-    #   legend.title      = element_text(size = 5, face = "bold")
-    # ) +
-    # guides(fill = guide_colorbar(title.position = "top", barwidth = 5))
 }
 
 # Get ocean
@@ -101,7 +94,7 @@ ocean <- ne_download(
 )
 ```
 
-```{r consumption data}
+```{r consumption data plots}
 # Read in consumption file
 consumption <- read_parquet("../data/consumption/example_consumption_eez_2024_12_06.parquet")
 
@@ -111,16 +104,21 @@ sciname <- read.csv("../data/consumption/sciname.csv")
 # Join isscaap names to consumptio ndata
 consumption_joined <- left_join(consumption, sciname, by = c("sciname_hs_modified" = "sciname"))
 
+# Reduce data size of consumption_joined
 consumption_joined <- consumption_joined %>%
   filter(year == 2019,
          !is.na(dom_source),
          !is.na(isscaap),
          !str_detect(isscaap, "Multiple ISSCAAP groups"))
 
+# Pull USA out
 USA <- consumption_joined %>%
   filter(year == 2019, consumer_iso3c == "USA")
 
-write_parquet(USA, "../data/USA.parquet")
+# Save to .parquet file
+# write_parquet(USA, "../data/USA.parquet")
+
+# Read USA file in
 USA <- read_parquet("../data/USA.parquet")
 
 # Create USA Graphic
@@ -148,7 +146,6 @@ USA <- read_parquet("../data/USA.parquet")
     ))
 
 # Top USA seafood consumption by source
-
 (USA_plot_2 <- USA %>%
   filter(!is.na(dom_source),
          !is.na(isscaap),
@@ -180,11 +177,10 @@ USA <- read_parquet("../data/USA.parquet")
 ))
 
 # Write to RDS
-write_rds(USA_plot_1, "../output/USA_plot_1.rds")
-write_rds(USA_plot_2, "../output/USA_plot_2.rds")
+# write_rds(USA_plot_1, "../output/USA_plot_1.rds")
+# write_rds(USA_plot_2, "../output/USA_plot_2.rds")
 
-# Produce density plots
-
+# Produce density plots showing global distribution of seafood conusmption by seafood type
 for (i in seafood_types) {
   plot <- consumption_joined %>%
   filter(!is.na(dom_source),
@@ -218,27 +214,22 @@ for (i in seafood_types) {
   # Save to RDS
   saveRDS(plot, paste0("../output/worldwide_consumption/", i, ".rds"))
 }
-readRDS("../output/worldwide_consumption/Herrings, sardines, anchovies.rds")
 ```
 
 ```{r create map data}
 # Load in protein data
 protein <- read.csv("../data/protein_contribution/supply_importance_long.csv")
 
-
-
-
+# Create a map of protein importance
 protein_map <- suppressMessages(
   protein %>%
-    filter(Element == "Protein supply quantity (g/capita/day)",
-           habitat == "marine",
-           method == "capture") %>%
+    filter(Element == "Protein supply quantity (g/capita/day)") %>%
     group_by(consumer_iso3c, year) %>%
-    summarize(Reliance = sum(aa_reliance_pct)) %>%
+    summarize(Reliance = round(100 * sum(aa_reliance_pct),1)) %>%
     filter(year == 2019) %>%
-    mutate(Reliance = round(sqrt(Reliance), 2)) %>%
+    # mutate(Reliance = round(sqrt(Reliance), 2)) %>%
     create_map(fill = "Reliance") +
-    labs(fill = "Protein Reliance")  # Label for colorbar
+    labs(fill = "Protein Reliance %")  # Label for colorbar
 )
 
 # Convert to plotly
@@ -249,7 +240,7 @@ protein_plotly <- ggplotly(protein_map)
   layout(coloraxis = list(
            colorbar = list(
              title = list(
-               text = "Protein reliance",
+               text = "Protein reliance %",
                font = list(size = 18)
              )
            )
@@ -261,9 +252,6 @@ write_rds(protein_map, "../output/protein_map.rds")
 ```
 
 ```{r}
-install.packages("rsconnect")
-library(rsconnect)
-
 # In shinyapps.io → Account → Tokens → Show API Token
 seafood_types <- c(
   "Abalones, winkles, conchs",
